--- a/relazioneAA/relazioneAA/res/sections/heldkarp.tex
+++ b/relazioneAA/relazioneAA/res/sections/heldkarp.tex
@@ -53,23 +53,23 @@ Commentate i risultati che avete ottenuto: come si comportano gli algoritmi risp
 	\end{itemize}
 	\item \textbf{C'è un algoritmo che riesce sempre a fare meglio degli altri rispetto all'errore di approssimazione?}
 	\begin{itemize}
-		\item \texttt{HeldKarp} riesce sempre a fare meglio di \texttt{CheapestInsertion} e \texttt{TriangleTSP} nelle istanze con meno di 23 nodi, vale a dire \texttt{burma14.tsp, ulysses16.tsp} e \texttt{ulysses22.tsp} perché riesce a trovare la soluzione ottima. Per tutte le altre istanze del dataset, \texttt{CheapestInsertion} riesce sempre a trovare una soluzione più vicina alla soluzione ottima rispetto agli altri due algoritmi implementati: il perché di questo dato di fatto non è ci è perfettamente chiaro. Abbiamo pensato che potrebbe essere perché... %TODO
+		\item \texttt{HeldKarp} riesce sempre a fare meglio di \texttt{CheapestInsertion} e \texttt{TriangleTSP} nelle istanze con meno di 23 nodi, vale a dire \texttt{burma14.tsp, ulysses16.tsp} e \texttt{ulysses22.tsp} perché riesce a trovare la soluzione ottima. Per tutte le altre istanze del dataset, \texttt{CheapestInsertion} riesce sempre a trovare una soluzione più vicina alla soluzione ottima rispetto agli altri due algoritmi implementati.
 	\end{itemize}
 	\item \textbf{Quale dei tre algoritmi che avete implementato è più efficiente?}
 	\begin{itemize}
-		\item Considerando il termine \quotes{efficienza} ed il suo significato in campo informatico, inteso come la capacità di utilizzare meno risorse\footnote{tempo di utilizzo della CPU e memoria} possibile durante la sua esecuzione, l'algoritmo più efficiente si rivela essere \texttt{TriangleTSP} perché è corretto rispetto al vincolo di 2-approssimazione ed impiega meno risorse di \texttt{CheapestInsertion}. Quest'ultimo, tuttavia, riesce a trovare una soluzione quasi il doppio più accurata del primo, a fronte di utilizzi di risorse più che accettabili per le istanze di TSP fornite. \`{E} per questo che ci sentiamo di dire che l'algoritmo che, mediamente, riesce a combinare \textbf{efficienza} ed \textbf{efficacia} meglio di tutti sia proprio \texttt{CheapestInsertion}.
+		\item Considerando il termine \quotes{efficienza} ed il suo significato in campo informatico, inteso come la capacità di utilizzare meno risorse\footnote{tempo di utilizzo della CPU e memoria} possibile durante la sua esecuzione, l'algoritmo più efficiente si rivela essere \texttt{TriangleTSP} perché è corretto rispetto al vincolo di 2-approssimazione ed impiega meno risorse di \texttt{CheapestInsertion}. Quest'ultimo, tuttavia, riesce a trovare una soluzione quasi il doppio più accurata del primo, come è possibile vedere a Figura~\ref{confronto}, a fronte dell'utilizzo di risorse più che accettabili per le istanze di TSP fornite. \`{E} per questo che ci sentiamo di dire che l'algoritmo il quale, mediamente, riesce a combinare \textbf{efficienza} ed \textbf{efficacia} meglio di tutti sia proprio \texttt{CheapestInsertion} per le istanza di grafi non troppo grandi. Infatti il tempo di esecuzione per \texttt{CheapestInsertion} aumenta esponenzialmente con l'aumentare della taglia del grafo, non giustificando più la differenza di accuratezza tra \texttt{CheapestInsertion} e \texttt{TringleTSP}.
 	\end{itemize}
 \end{itemize}
 
 
 \paragraph{Discussione su \texttt{CheapestInsertion} e \texttt{TriangleTSP}} \label{ci-ttsp}
 Entrambi gli algoritmi sono una 2-approssimazione per TSP, ma riportano risultati differenti: \texttt{CheapestInsertion} richiede più tempo per essere eseguito rispetto a \texttt{TriangleTSP}, ma ottiene un errore relativo minore.\eqcapo 
-Per capire dunque quale dei due algoritmi sia più efficiente ed efficace, è possibile osservare gli istogrammi in Figura~\ref{confronto} che mostrano prima la differenza del tempo di esecuzione dei due algoritmi su scala logaritmica per i vari grafi, poi il tempo di esecuzione su una scala normale ed infine il rispettivo errore relativo. Confrontando il primo e terzo istogramma è possibile vedere come per un aggiunta di tempo di computazione relativamente basso si ottiene un notevole miglioramento per l'errore relativo, infatti \texttt{TriangleTSP} raggiunge in media un errore relativo più alto ($\sim$32\%) rispetto a \texttt{CheapestInsertion} ($\sim$16\%). Se si osserva il secondo istogramma si può vedere come con grafi di taglia maggiore il tempo di esecuzione per \texttt{CheapestInsertion} aumenti esponenzialmente rispetto a \texttt{TriangleTSP}, basti osservare il tempo di esecuzione per i grafi \texttt{d449.tsp} e \texttt{dsj1000.tsp}: dunque per grafi di grande taglia è consigliabile utilizzare \texttt{TriangleTSP}, altrimenti \texttt{CheapestInsertion}.
+Per capire dunque quale dei due algoritmi sia più efficiente ed efficace, è possibile osservare gli istogrammi in Figura~\ref{confronto} che mostrano prima la differenza del tempo di esecuzione dei due algoritmi su scala logaritmica per i vari grafi, poi il tempo di esecuzione su una scala normale ed infine il rispettivo errore relativo. Confrontando il primo e terzo istogramma è possibile vedere come per una differenza di tempo di computazione relativamente basso si ottiene un notevole miglioramento per l'errore relativo, infatti \texttt{TriangleTSP} raggiunge in media un errore relativo più alto ($\sim$30\%) rispetto a \texttt{CheapestInsertion} ($\sim$16\%). Se si osserva il secondo istogramma si può vedere come con grafi di taglia maggiore il tempo di esecuzione per \texttt{CheapestInsertion} aumenti esponenzialmente rispetto a \texttt{TriangleTSP}, basti osservare il tempo di esecuzione per i grafi \texttt{d449.tsp} e \texttt{dsj1000.tsp}: dunque per grafi di grande taglia è consigliabile utilizzare \texttt{TriangleTSP}, altrimenti \texttt{CheapestInsertion}.
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=\textwidth]{confronto}
-	\caption{Confronto tra \texttt{CheapestInsertion} e \texttt{TriangularTSP}}
+	\caption{Confronto tra \texttt{CheapestInsertion} e \texttt{TriangleTSP}}
 	\label{confronto}
 \end{figure}
 
